fixed footer spacing

--- a/resources/assets/sass/partials/_footer.scss
+++ b/resources/assets/sass/partials/_footer.scss
@@ -1,56 +1,49 @@
 /*
 //
-// FOOTER LOGOS
-// --------------------------------------------------
-*/
-.page-footer-logos {
-    margin : 2em 0;
-}
-
-/*
-//
-// GENERAL PAGE FOOTER AREA
+// Footer Styles
 // --------------------------------------------------
 */
 .page-footer {
     margin-top: 2em;
-    padding    : 1em 0 0;
+    padding    : 2em 0 0;
     background : #faa634;
 }
 
 /*
 //
-// PAGE FOOTER FORM
+// Footer Form Styles
 // --------------------------------------------------
 */
-.page-footer .footer-form-container {
-    background: $color-orange;
-}
-
-.page-footer .form {
-    padding       : 1em;
-
-    .btn.btn-primary {
-        color        : $color-white !important;
-        font-weight  : bold;
-        background   : black;
-        border-color : darken($color-orange, 5);
+.page-footer  {
+    .footer-form-container {
+        background: $color-orange;
     }
 
-    input.form-control,
-    textarea.form-control {
-        border-color  : darken(#bf6122, 5);
-        border-radius : 0;
-        padding       : .7em;
-        color         : $color-white;
-        background    : #bf6122;
-    }
+    .form {
+        padding       : 0 0 2em;
 
-    input.form-control::placeholder,
-    textarea.form-control::placeholder {
-        color          : $color-white;
-        font-size      : 13px;
-        text-transform : uppercase;
+        .btn.btn-primary {
+            color        : $color-white !important;
+            font-weight  : bold;
+            background   : black;
+            border-color : darken($color-orange, 5);
+        }
+
+        input.form-control,
+        textarea.form-control {
+            border-color  : darken(#bf6122, 5);
+            border-radius : 0;
+            padding       : .7em;
+            color         : $color-white;
+            background    : #bf6122;
+        }
+
+        input.form-control::placeholder,
+        textarea.form-control::placeholder {
+            color          : $color-white;
+            font-size      : 13px;
+            text-transform : uppercase;
+        }
     }
 }
 
@@ -83,7 +76,8 @@
 */
 .page-footer .social-bar {
     align-self : center;
-    margin-bottom : 1em;
+    margin-bottom : 2rem;
+
     ul {
         display         : flex;
         margin-top      : 1em;
